tests/transpiler/x/pl/min_max_builtin.pl
% Generated by Mochi transpiler 2025-07-20 01:42:27 UTC
:- style_check(-singleton).
:- initialization(main).

main :-
    Nums is [3, 1, 4],
    min_list(Nums, R1), write(R1), nl,
    max_list(Nums, R2), write(R2), nl.
